--- a/index.html
+++ b/index.html
@@ -508,7 +508,14 @@
                                 shadow-[0_0_10px_rgba(16,185,129,0.8)] animate-pulse">
                     2025-09-12
                     </span>
-                    <span>Leaderboard is on! Check out the result!</span>
+                    <span>
+                        <a href="https://neuromedbench.github.io/" 
+                        target="_blank" 
+                        class="text-emerald-400 hover:underline">
+                            Leaderboard
+                        </a> 
+                        is on! Check out the result!
+                    </span>
                 </h3>
             </div>
                  
@@ -534,7 +541,14 @@
                             shadow-[0_0_10px_rgba(16,185,129,0.8)] animate-pulse">
                 2025-05-16
                 </span>
-                <span>We release the Neural-MedBench dataset</span>
+                <span>
+                We release the Neural-MedBench 
+                <a href="https://huggingface.co/datasets/Reisen301/Neural-MedBench" 
+                    target="_blank" 
+                    class="text-emerald-400 hover:underline">
+                    dataset
+                </a>
+                </span>
             </h3>
             </div>
 
