--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                         <img src="img/logo/b.png" alt="GitHub" class="max-h-24">
                     </a>
                     <a href="#" class="p-3 bg-dark-card hover:opacity-80 transition-all duration-300 border border-white/10 hover:border-primary/30 hover:shadow-glow rounded-lg">
-                        <img src="img/logo/UM_logo.png" alt="Twitter" class="max-h-24">
+                        <img src="img/logo/UM_Logo.png" alt="Twitter" class="max-h-24">
                     </a>
                 </div>
             </div>
